<resources>
    <string name="app_name">FORCOMS</string>
    <string name="description_forcoms_definition">FORCOMS merupakan sebuah aplikasi forum berbasis Android yang dimana, anda sebagai pengguna dapat bertanya dan juga dapat memecahkan suatu masalah dalam lingkup ranah Ilmu Komputer. Besar harapan kami agar FORCOMS ini dapat membantu anda dalam menyelesaikan permasalahan terkait Ilmu Komputer. Terima Kasih.</string>
    <string name="title_forcoms_definition">Apa Itu Forcoms?</string>
    <string name="label_continue">Lanjutkan</string>
    <string name="content_desc_forcoms_intro">Forcoms Intro Art</string>
    <string name="label_topic_list">Daftar Topik</string>
    <string name="label_topic_subs">Topik Diikuti</string>
    <string name="label_my_profile">Profil Saya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_title">apa itu forcorms</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_register">Register</string>
    <string name="label_have_account">Sudah memiliki akun</string>
    <string name="label_login">Button</string>
    <string name="label_log">Login</string>
    <string name="label_create_account">Belum Memiliki Akun</string>
    <string name="logout_username">Username</string>
    <string name="logout_password">Password</string>
    <string name="logout_button">Logout</string>
    <string name="logout_edit">edit</string>
    <string name="hint_password_lama">Password Lama</string>
    <string name="hint_password_baru">Password Baru</string>
    <string name="hint_konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="label_ganti_password">Ganti Password</string>
    <string name="username_profile">Profile</string>
    <string name="username_old">Old Username</string>
    <string name="username_new">New Username</string>
    <string name="username_button_change">change</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="label_change_now">Change Now</string>
    <string name="content_description_open_topic">open a topic</string>
    <string name="placeholder_topic_title">Judul Topik</string>
    <string name="placeholder_topic_creator">Nama Penanya</string>
    <string name="title_topic">Judul Topik</string>
    <string name="question_topic">Pertanyaan / Pendapat Pembuka</string>
    <string name="start_topic">Buka Topik</string>
    <string name="placeholder_comment_content">Komentar Komentar Komentar Komentar Komentar Komentar Komentar Komentar Komentar Komentar Komentar Komentar.</string>
    <string name="placeholder_comment_creator">Nama Pemberi Komentar</string>
    <string name="edit_comment">Edit Komentar</string>
    <string name="button_delete">delete</string>
    <string name="konten_komentar">Konten Komentar</string>
    <string name="judul_topik">Judul Topik</string>
    <string name="edit_judul_topik">Edit Judul Topik</string>
    <string name="title_activity_login_try">LoginTry</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="content_description_splash_screen">Logo Forcoms</string>
</resources>