<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".commententity.EditCommentFragment"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edit_comment_content"
        android:text="@string/konten_komentar"/>

    <EditText
        android:id="@+id/edit_comment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:gravity="top|start"
        android:background="@color/WhiteSmoke"
        android:inputType="text|textMultiLine"/>

    <Button
        android:id="@+id/edit_comment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blueRoyal"
        android:backgroundTint="@color/white"
        android:text="@string/edit_comment"/>

    <Button
        android:id="@+id/edit_comment_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/button_delete"/>

</LinearLayout>