<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUserFragment">

    <EditText
        android:id="@+id/register_input_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:background="@color/WhiteSmoke"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@color/WhiteSmoke"
        android:hint="@string/hint_password"
        android:inputType="text|textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/label_register"
        android:textColor="@color/blueRoyal"
        android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/register_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/label_have_account"
        android:textColor="@color/WhiteSmoke"
        android:backgroundTint="@color/blueRoyal" />



</LinearLayout>