<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePasswordFragment">

    <EditText
        android:id="@+id/change_old_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:background="@color/WhiteSmoke"
        android:hint="@string/hint_password_lama"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <EditText
        android:id="@+id/change_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@color/WhiteSmoke"
        android:hint="@string/hint_password_baru"
        android:inputType="text|textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <EditText
        android:id="@+id/change_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@color/WhiteSmoke"
        android:hint="@string/hint_konfirmasi_password_baru"
        android:inputType="text|textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <Button
        android:id="@+id/change_password_button_ganti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/label_ganti_password"
        android:textColor="@color/WhiteSmoke"
        android:backgroundTint="@color/blueRoyal" />

</LinearLayout>